@@ -249,6 +249,7 @@ class StorageUserPQuota(StorageObject) :
         
     def setDateLimit(self, datelimit) :    
         """Sets the date limit for this quota."""
+        datelimit = DateTime.ISO.ParseDateTime(str(datelimit))
         date = "%04i-%02i-%02i %02i:%02i:%02i" % (datelimit.year, datelimit.month, datelimit.day, datelimit.hour, datelimit.minute, datelimit.second)
         self.parent.writeUserPQuotaDateLimit(self, date)
         self.DateLimit = date
@@ -373,6 +374,7 @@ class StorageGroupPQuota(StorageObject) :
         
     def setDateLimit(self, datelimit) :    
         """Sets the date limit for this quota."""
+        datelimit = DateTime.ISO.ParseDateTime(str(datelimit))
         date = "%04i-%02i-%02i %02i:%02i:%02i" % (datelimit.year, \
                                                   datelimit.month, \
                                                   datelimit.day, \
